Fixes spacing on timeline

--- a/client/src/components/RomanTimeline.css
+++ b/client/src/components/RomanTimeline.css
@@ -11,8 +11,11 @@
   behavior: 'smooth';
 }
 
+.hline { width:100%; height:1px; background: red; z-index: 1 }
+
 .timeline li {
-  width: 500px;
+  width:100%; height:1px;
+  min-width: 500px;
   height: 50vh;
   transform: rotate(90deg) translateY(20vh);
   transform-origin: center;
@@ -22,76 +25,78 @@
 
 html, body {
   color: black;
-	background: #fff;
+  background: black;
   background-image: url("https://upload.wikimedia.org/wikipedia/commons/6/64/Cole_Thomas_The_Course_of_Empire_Destruction_1836.jpg");
   background-size: cover;
-	min-width: 700px;
+  min-width: 700px;
+  z-index: 0;
 }
 
 
 
 /* ---- Timeline ---- */
 ol {
-	position: relative;
-	display: block;
-	margin: 100px;
-	height: 4px;
-	background: #31708F;
+  position: relative;
+  display: block;
+  margin: 100px;
+  height: 4px;
+  background: #31708F;
 }
 ol::before,
 ol::after {
-	content: "";
-	position: absolute;
-	top: -8px;
-	display: block;
-	width: 0;
-	height: 0;
+  content: "";
+  position: absolute;
+  top: -8px;
+  display: block;
+  width: 0;
+  height: 0;
   border-radius: 10px;
-	border: 10px solid #31708F;
+  border: 10px solid #31708F;
 }
 ol::before {
-	left: -5px;
+  left: -5px;
 }
 ol::after {
-	right: -10px;
-	border: 10px solid transparent;
-	border-right: 0;
-	border-left: 20px solid blue;
+  right: -10px;
+  border: 10px solid transparent;
+  border-right: 0;
+  border-left: 20px solid blue;
   border-radius: 3px;
 }
 
 /* ---- Timeline elements ---- */
 li {
-	position: relative;
-	display: inline-block;
-	float: left;
-	width: 150px;
+  position: relative;
+  display: inline-block;
+  float: left;
+  width: 150px;
   height: 50px;
 }
 li .event {
   position: absolute;
-	font: bold 14px arial;  top: -47px;
+  font: bold 14px arial;  top: -47px;
   left: 36%;
   color: blue;
 }
 
 li .date {
   position: relative;
-  font: bold 20px arial;  top: -47px;
+  padding: 20px;
+  font: bold 50px arial;  top: -47px;
   left: 36%;
   color: red;
 }
 
 li .point {
-	content: "";
-	top: -4px;
-	left: 43%;
-	display: block;
-	width: 6px;
-	height: 6px;
-	border: 4px solid #31708F;
-	border-radius: 10px;
-	background: #fff;
+  content: "";
+  top: -4px;
+  left: 43%;
+  display: block;
+  width: 6px;
+  height: 6px;
+  border: 4px solid #31708F;
+  border-radius: 10px;
+  background: #fff;
   position: absolute;
 }
 li .description {
@@ -117,7 +122,7 @@ li .description {
 
 /* ---- Hover effects ---- */
 li:hover {
-	cursor: pointer;
+  cursor: pointer;
   color: red;
 }
 li:hover .description {
@@ -126,8 +131,14 @@ li:hover .description {
 
 .content {
   padding: 20px 30px;
-    background-color: white;
-    position: relative;
-    border: 1px solid black;
-    border-radius: 6px;
-  }
+  background-color: white;
+  position: relative;
+  border: 1px solid black;
+  border-radius: 6px;
+}
+
+.event {
+  padding: 30px;
+}
+
+.hline { width:100%; height:1px; background: #fff }
