--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: black;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
@@ -12,5 +13,5 @@ h2 {
     text-decoration: none;
 }
 #root {
-  
+
 }
